# pdf-analyzer-rag

./: .gitignore  Dockerfile  README.md  pyproject.toml  start_app.sh
frontend/app/: page.tsx
frontend/lib/: api.ts
notebooks/: exploration.ipynb
src/: api.py  auditor.py  config.py  ingest.py  rag_engine.py  sagemaker_entry.py  utils.py
tests/: test_auditor.py  test_ingest.py
