[tool.poetry]
name = "pur-auditor-rag"
version = "0.1.0"
description = "A Retrieval-Augmented Generation application for auditing R&D Project Plans."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/pur-auditor-rag"
repository = "https://github.com/yourusername/pur-auditor-rag"
keywords = ["RAG", "LangChain", "AWS", "SageMaker", "PDF", "Pydantic"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.5"
langchain-aws = "^0.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
pdfplumber = "^0.10.3"
tiktoken = "^0.5.0"
boto3 = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"